<resources>
    <string name="app_name">Epicture</string>
    <string name="buttonUser">USER</string>
    <string name="buttonHome">HOME</string>
    <string name="buttonUpload">UPLOAD</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="search">SEARCH</string>
    <string name="select">SELECT</string>
    <string name="send">SEND</string>
    <string name="favorites">FAV</string>
    <string name="ex_dogs">ex. dogs</string>
    <string name="action_search">action_search</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_out">Sign Out</string>

</resources>
